--- a/public/css/main.css
+++ b/public/css/main.css
@@ -59,9 +59,19 @@
   font-size: 15px;
 }
 
+.PanelAdminItem:hover {
+  background-color: #0a304e;
+}
+
 .PanelAdminList:hover {
   background-color: #0a304e;
   cursor: pointer;
+}
+
+.NavActive {
+  color: rgb(0, 228, 0);
+  font-weight: bolder;
+  font-size: larger;
 }
 
 /* ---------------------------------------------------------------------------------------------------- */
@@ -138,7 +148,9 @@
 /* ---------------------------------------------------------------------------------------------------- */
 
 .MainAddBlog {
-  height: 100%;
+  height: 300px;
+  margin-top: 1% ;
+  margin-left: 1% ;
 }
 
 .SidebarAddBlog {
@@ -197,9 +209,16 @@
 .ContentAddBlog {
   background-color: rgb(248, 247, 247);
   width: 100%;
-  height: 100%;
+  height: 100vh;
   border-radius: 90px;
 }
+
+
+.ck-editor__editable {
+    min-height: 400px;
+    max-height: 400px;
+}
+
 
 .TitleInputAddBlog {
   width: 80%;
